k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authapi
  namespace: telecure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authapi
  template:
    metadata:
      labels:
        app: authapi
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: authapi
          image: ghcr.io/ashokadk457/authapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authapi
  namespace: telecure
spec:
  selector:
    app: authapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productapi
  namespace: telecure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapi
  template:
    metadata:
      labels:
        app: productapi
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: productapi
          image: ghcr.io/ashokadk457/productapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productapi
  namespace: telecure
spec:
  selector:
    app: productapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: telecure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/ashokadk457/frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: telecure
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
