k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telecure-ingress
  namespace: telecure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: authapi.samplerestapi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authapi
                port:
                  number: 80

    - host: productapi.samplerestapi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: productapi
                port:
                  number: 80

    - host: app.samplerestapi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
